fix: image not aligned to background in full screen

--- a/src/sections/projects/components/project-content/index.module.scss
+++ b/src/sections/projects/components/project-content/index.module.scss
@@ -15,7 +15,7 @@
 }
 
 .project-card-img {
-  max-width: 100%;
+  width: 90%;
   height: auto;
   aspect-ratio: 16/9;
 }
